--- a/macho/shopping.html
+++ b/macho/shopping.html
@@ -29,7 +29,7 @@
             </div>
             <div class="form" id="form0">
                 <ul>
-                    <li><input type="submit" value="×" class="btn dlt" id="btnDlt" onclick="deleteLine()"></li>
+                    <li><input type="submit" value="×" class="btn dlt" id="btnDlt0" onclick="deleteForm(this.id)"></li>
                     <li><input type="text" class="item" id="itemForm0"></li>
                     <li>
                         <input type="text" class="price" id="priceForm0"><span class="en">円</span>
@@ -57,11 +57,22 @@
     <script>
         let count = 0;
 
-        // //フォームを一行削除
-        // const deleteLine = () => {
-        //   var formElement = document.getElementById("form0");
-        //   formElement.remove();
-        // }
+        const deleteForm = (btnId) => {
+            const forms = document.getElementsByClassName("form");
+            if (forms.length > 1) {
+                //親要素の親要素の親要素を取得
+                let parent = document.getElementById(btnId).parentNode.parentNode.parentNode;
+                //フォームを一行削除
+                parent.remove();
+            } else {
+                forms[0].getElementsByClassName("item")[0].value = '';
+                forms[0].getElementsByClassName("price")[0].value = '';
+                forms[0].getElementsByClassName("tax")[0].checked = "checked";
+                forms[0].getElementsByClassName("priceIncludingTax")[0].value = '';
+                forms[0].getElementsByClassName("quantity")[0].value = 1;
+            }
+
+        }
 
         //フォームを追加
         const addLine = () => {
@@ -69,30 +80,33 @@
             count++;
 
             // 複製するHTML要素を取得
-            //const form = document.getElementById("form");
             const forms = document.getElementsByClassName("form");
             const form = forms[forms.length - 1];
+
 
             // 複製
             let clone_form = form.cloneNode(true);
 
             // 複製した要素の属性を編集
-            clone_form.getElementsByClassName("form")[0].id = `form${count}`;
+            // clone_form.getElementsByClassName("form")[0].id = `form${count}`;
+            clone_form.id = `form${count}`;
+
+            clone_form.getElementsByClassName("btn")[0].id = `btnDlt${count}`;
 
             clone_form.getElementsByClassName("item")[0].value = '';
-            // clone_form.getElementsByClassName("item")[0].id = `itemForm${count}`;
+            clone_form.getElementsByClassName("item")[0].id = `itemForm${count}`;
 
             clone_form.getElementsByClassName("price")[0].value = '';
-            // clone_form.getElementsByClassName("price")[0].id = `priceForm${count}`;
+            clone_form.getElementsByClassName("price")[0].id = `priceForm${count}`;
 
             clone_form.getElementsByClassName("tax")[0].checked = "checked";
             clone_form.getElementsByClassName("tax")[0].name = `tax${count}`;
             clone_form.getElementsByClassName("tax")[1].name = `tax${count}`;
 
             clone_form.getElementsByClassName("priceIncludingTax")[0].value = '';
-            // clone_form.getElementsByClassName("priceIncludingTax")[0].id = `priceIncludingTaxForm${count}`;
+            clone_form.getElementsByClassName("priceIncludingTax")[0].id = `priceIncludingTaxForm${count}`;
 
-            // clone_form.getElementsByClassName("quantity")[0].value = 1;
+            clone_form.getElementsByClassName("quantity")[0].value = 1;
 
             // 複製したHTML要素をページに挿入
             form.after(clone_form);
