公開ファイルを変更

--- a/index.html
+++ b/index.html
@@ -1,139 +1,141 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ja">
 
 <head>
-    <meta charset="UTF-8">
-    <title>WEBお買い物計算メモ</title>
+    <meta charset="utf-8">
+    <title>Shopping</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="responsive.css">
+    <script type="text/javascript" src="macho/shopping.js"></script>
 </head>
 
 <body>
     <header>
-        WEBお買い物計算メモ
+        <h1>買い物リスト</h1>
     </header>
-    <div class="container">
-        <div class="main">
-            <table id="table">
-                <tr>
-                    <th></th>
-                    <th>商品名</th>
-                    <th>税抜価格</th>
-                    <th>税率</th>
-                    <th>税込価格</th>
-                </tr>
-                <tr>
-                    <td>
-                        <button type="button" onclick="rowdel(this)">削除</button>
-                    </td>
-                    <td>
-                        <input type="text" class="item">
-                    </td>
-                    <td>
-                        <input type="number" class="price" min="0" size="10" onkeyup="priceCalc(this);sumCalc()">円
-                    </td>
-                    <td>
-                        <ul>
-                            <li>
-                                <input type="radio" class="taxRate" name="taxRate0" checked="checked"
-                                    onclick="priceCalc(this);sumCalc()"> 8%
-                            </li>
-                            <li>
-                                <input type="radio" class="taxRate" name="taxRate0" onclick="priceCalc(this);sumCalc()">
-                                10%
-                            </li>
-                        </ul>
-                    </td>
-                    <td>
-                        <span class="priceIncludingTax">0</span>円
-                    </td>
-                </tr>
-            </table>
-            <div class="button" onclick="rowadd()">商品を追加</div>
-        </div>
-        <div class="displayResult">
-            <p>合計</p>
-            <p>税抜：<span id="sumNotIncludingTax">0</span>円</p>
-            <p>税込：<span id="sumIncludingTax">0</span>円</p>
 
+    <main>
+        <div class="container">
+            <div class="title">
+                <ul>
+                    <li></li>
+                    <li>商品名</li>
+                    <li>税抜価格</li>
+                    <li>税率</li>
+                    <li>税込価格</li>
+                    <li>個数</li>
+                </ul>
+            </div>
+            <div class="form" id="form0">
+                <ul>
+                    <li><input type="submit" value="×" class="btn dlt" id="btnDlt0" onclick="deleteForm(this.id); calculateSum()"></li>
+                    <li><input type="text" class="item" id="itemForm0"></li>
+                    <li>
+                        <input type="number" class="price" id="priceForm0" oninput="calculatePriceIncludingTax(this.id); calculateSum()"><span class="en">円</span>
+                    </li>
+                    <li class="taxRate">
+                        <input type="radio" class="tax" name="tax0" id="tax8-0" checked="checked" onclick="calculatePriceIncludingTax(this.id); calculateSum()"><span>&nbsp; 8%</span><br class="sp">
+                        <input type="radio" class="tax" name="tax0" id="tax10-0" onclick="calculatePriceIncludingTax(this.id); calculateSum()"><span>10%</span>
+                    </li>
+                    <li>
+                        <input type="number" class="priceIncludingTax" id="priceIncludingTaxForm0" readonly><span class="en">
+              円</span>
+                    </li>
+                    <li><input type="number" class="quantity" id="quantityForm0" value="1" oninput="calculateSum()"></li>
+                </ul>
+            </div>
+            <div>
+                <input type="submit" value="+" class="btn pls" id="btnPls" onclick="addLine()">
+            </div>
         </div>
-    </div>
+    </main>
+    <footer>
+        <h2 class="sum">合計</h2>
+        <input type="text" class="result" id="resultForm" readonly><span class="en">円</span>
+    </footer>
 
     <script>
-        //追加ボタンを押された回数を保存
-        var addRowCount = 0;
+        let count = 0;
 
-        //追加ボタンが押された時の処理ï
-        const rowadd = () => {
-            //商品追加ボタンを押した回数を1増やす
-            addRowCount++;
+        const deleteForm = (btnId) => {
+            const forms = document.getElementsByClassName("form");
+            if (forms.length > 1) {
+                //親要素の親要素の親要素を取得
+                let parent = document.getElementById(btnId).parentNode.parentNode.parentNode;
+                //フォームを一行削除
+                parent.remove();
+            } else {
+                forms[0].getElementsByClassName("item")[0].value = '';
+                forms[0].getElementsByClassName("price")[0].value = '';
+                forms[0].getElementsByClassName("tax")[0].checked = "checked";
+                forms[0].getElementsByClassName("priceIncludingTax")[0].value = '';
+                forms[0].getElementsByClassName("quantity")[0].value = 1;
+            }
+
+        }
+
+        //フォームを追加
+        const addLine = () => {
+
+            count++;
 
             // 複製するHTML要素を取得
-            let trTags = document.getElementsByTagName("tr");
-            let trTag = trTags[trTags.length - 1];
+            const forms = document.getElementsByClassName("form");
+            const form = forms[forms.length - 1];
 
-            // 複製し、値を初期化
-            let clone_element = trTag.cloneNode(true);
-            clone_element.getElementsByClassName("item")[0].value = "";
-            clone_element.getElementsByClassName("price")[0].value = "";
-            clone_element.getElementsByClassName("taxRate")[0].checked = "checked";
-            clone_element.getElementsByClassName("taxRate")[0].name = `taxRate${addRowCount}`;
-            clone_element.getElementsByClassName("taxRate")[1].name = `taxRate${addRowCount}`;
-            clone_element.getElementsByClassName("priceIncludingTax")[0].innerHTML = "0";
+
+            // 複製
+            let clone_form = form.cloneNode(true);
+
+            // 複製した要素の属性を編集
+            // clone_form.getElementsByClassName("form")[0].id = `form${count}`;
+            clone_form.id = `form${count}`;
+
+            clone_form.getElementsByClassName("btn")[0].id = `btnDlt${count}`;
+
+            clone_form.getElementsByClassName("item")[0].value = '';
+            clone_form.getElementsByClassName("item")[0].id = `itemForm${count}`;
+
+            clone_form.getElementsByClassName("price")[0].value = '';
+            clone_form.getElementsByClassName("price")[0].id = `priceForm${count}`;
+
+            clone_form.getElementsByClassName("tax")[0].checked = "checked";
+            clone_form.getElementsByClassName("tax")[0].id = `tax8-${count}`;
+            clone_form.getElementsByClassName("tax")[1].id = `tax10-${count}`;
+            clone_form.getElementsByClassName("tax")[0].name = `tax${count}`;
+            clone_form.getElementsByClassName("tax")[1].name = `tax${count}`;
+
+            clone_form.getElementsByClassName("priceIncludingTax")[0].value = '';
+            clone_form.getElementsByClassName("priceIncludingTax")[0].id = `priceIncludingTaxForm${count}`;
+
+            clone_form.getElementsByClassName("quantity")[0].value = 1;
 
             // 複製したHTML要素をページに挿入
-            trTag.after(clone_element);
+            form.after(clone_form);
         }
 
-        const priceCalc = (obj) => {
-            // 選択された行のインデックスを取得
-            let tr = obj.parentNode.parentNode.sectionRowIndex;
-            let node = document.getElementsByTagName("tr")[tr];
-
-            //税抜き価格を取得
-            var price = node.getElementsByClassName("price")[0].value;
-            var taxRates = node.getElementsByClassName("taxRate");
-            //税率
-            var taxRate = Number(taxRates[0].checked) * 1.08 + Number(taxRates[1].checked) * 1.1;
-            //誤差を考慮して税込価格を計算し、出力
-            node.getElementsByClassName("priceIncludingTax")[0].innerHTML = Math.round((price * taxRate * 100)) / 100;
+        const calculatePriceIncludingTax = (id) => {
+            let parent = document.getElementById(id).parentNode.parentNode.parentNode;
+            let price = parent.getElementsByClassName("price")[0].value;
+            let radio = parent.getElementsByClassName("tax");
+            let taxRate = Number(radio[0].checked) * 1.08 + Number(radio[1].checked) * 1.1;
+            parent.getElementsByClassName("priceIncludingTax")[0].value = Math.round(price * taxRate * 100) / 100;
         }
-
-        const sumCalc = () => {
-            //クラスがpriceのものを全て取得
-            var prices = document.getElementsByClassName('price');
-
-            //クラスがpriceIncludingTaxのものを全て取得
-            var pricesIncludingTax = document.getElementsByClassName('priceIncludingTax');
-
-            var sumNotIncludingTax = 0;
-            var sumIncludingTax = 0;
-            //合計を求めて
-            for (var i = 0; i < prices.length; i++) {
-                if (!prices[i].value == "") {
-                    sumNotIncludingTax += parseInt(prices[i].value);
-                    sumIncludingTax += parseFloat(pricesIncludingTax[i].innerHTML);
-                }
+        const calculateSum = () => {
+            let result = 0;
+            let priceIncludingTaxes = document.getElementsByClassName("priceIncludingTax");
+            let quantity = document.getElementsByClassName("quantity");
+            for (let i = 0; i < priceIncludingTaxes.length; i++) {
+                result = result + priceIncludingTaxes[i].value * quantity[i].value;
             }
-            //誤差を調整
-            sumIncludingTax = Math.round(sumIncludingTax * 100) / 100;
-            //出力
-            document.getElementById(`sumNotIncludingTax`).innerHTML = sumNotIncludingTax;
-            document.getElementById(`sumIncludingTax`).innerHTML = sumIncludingTax;
-        }
+            document.getElementById("resultForm").value = Math.round(result);
 
-        const rowdel = (obj) => {
-            if (table.rows.length > 2) {
-                // 削除ボタンを押下された行を取得
-                tr = obj.parentNode.parentNode;
-                // trのインデックスを取得して行を削除する
-                tr.parentNode.deleteRow(tr.sectionRowIndex);
-                //合計値を再計算
-                sumCalc();
-            } else {
-                alert("全ての行を削除することはできません。")
-            }
+
+
         }
     </script>
+
 </body>
 
 </html>
