入力フォームの幅変更

--- a/macho/shopping.html
+++ b/macho/shopping.html
@@ -52,7 +52,7 @@
     </main>
     <footer>
         <h2 class="sum">合計</h2>
-        <input type="text" class="result" id="resultForm" readonly><span class="en">円</span>
+        <input type="text" class="result" id="resultForm" value="0" readonly><span class="en">円</span>
     </footer>
 
     <script>
